# Rdash

./: Cargo.toml  Makefile  Rdash.desktop
scripts/: Rdash-startup.sh
